[package]
name = "wtimer"
version = "0.1.0"
authors = ["Ilja Khabarov <ilja.khabarov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
dialog = "0.3.0"
